--- a/packages.html
+++ b/packages.html
@@ -16,4 +16,16 @@
     <a href="git+https://git@github.com/iTaxoTools/taxi2.git@main#egg=taxi2-2.1.0">
       taxi2-2.1.0</a><br/>
   </div>
+  <div name="decontaminator">
+    <a href="git+https://git@github.com/iTaxoTools/Decontaminator.git@main#egg=decontaminator-0.0.1">
+      decontaminator-0.0.1</a><br/>
+  </div>
+  <div name="Genesubsetselector">
+    <a href="git+https://git@github.com/iTaxoTools/Gene_subset_selector.git@main#egg=Genesubsetselector-0.0.1">
+      Genesubsetselector-0.0.1</a><br/>
+  </div>
+  <div name="SCaFoSpy">
+    <a href="git+https://git@github.com/iTaxoTools/SCaFoSpy.git@main#egg=SCaFoSpy-0.0.1">
+      SCaFoSpy-0.0.1</a><br/>
+  </div>
 </html>
